added footer style in sample_website_html

--- a/mystyle.css
+++ b/mystyle.css
@@ -10,7 +10,7 @@ header {
             text-align: center;
         }
 
-        /* Style for the navigation menu */
+
         nav {
             background-color: #333;
             padding: 10px;
@@ -33,7 +33,21 @@ header {
             font-size: 18px;
         }
 
+
+        nav ul li a:link {
+            color: white;
+        }
+        nav ul li a:visited {
+            color: purple;
+        }
+        nav ul li a:active {
+            color: red;
+        }
+
         nav ul li a:hover {
             background-color: #555;
             border-radius: 5px;
         }
+
+
+
