--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,6 @@
+
 header {
-            background-image: url('header_background.jpg');
+            background-image: url('header_background.JPG');
             background-size: cover;
             background-position: center;
             height: 300px;
@@ -36,9 +37,10 @@ header {
 
         nav ul li a:link {
             color: white;
+            /*transition: background-color 0.5s;*/
         }
         nav ul li a:visited {
-            color: purple;
+            color: rgb(255,0,255);
         }
         nav ul li a:active {
             color: red;
@@ -50,4 +52,33 @@ header {
         }
 
 
+        footer {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 20px;
+        }
 
+        .content {
+            padding: 20px;
+        }
+
+        .gallery {
+            display: flex;
+            flex-direction: row-reverse;
+            justify-content: space-between;
+            margin-top: 20px;
+        }        
+        .gallery div {
+            width: 30%;
+            padding: 10px;
+            background-color: #f0f0f0;
+        }
+        .gallery img {
+            width: 100%;
+            height: auto;
+        }
+        .gallery p {
+            margin-top:25px;
+        }
