--- a/mystyle.css
+++ b/mystyle.css
@@ -37,6 +37,7 @@ header {
 
         nav ul li a:link {
             color: white;
+            /*transition: background-color 0.5s;*/
         }
         nav ul li a:visited {
             color: rgb(255,0,255);
