--- a/mystyle.css
+++ b/mystyle.css
@@ -82,3 +82,10 @@ header {
         .gallery p {
             margin-top:25px;
         }
+
+        @media only screen and (max-width:400px) {
+            nav ul li a{
+                font-size: 12px;
+            }
+
+        }
