--- a/mystyle.css
+++ b/mystyle.css
@@ -33,7 +33,7 @@
             color: white;
             text-decoration: none;
             padding: 10px 20px;
-            font-size: 12px;
+            font-size: 18px;
         }
 
 
@@ -54,7 +54,11 @@
         }
 
         @media only screen and (max-width:400px) {
+            nav ul {
+                padding-inline-start: 0px;
+            }
             nav ul li a{
+                padding: 10px;
                 font-size: 12px;
             }
 
